tests/negative/issue1700/SelfApplication.juvix
-- self-application
module SelfApplication;

import Stdlib.Prelude open;

main : IO := printNatLn (λ {x := x x} id (3 + 4));

